adaptive: add missing <limits> include

Compilation would fail with:

> error: 'numeric_limits' is not a member of 'std'

without this include because of some hardening build
flags mandated on Fedora Linux, with GCC 11.

Refs #25325

Signed-off-by: Robert-André Mauchin <zebob.m@gmail.com>
Signed-off-by: Alexandre Janniaux <ajanni@videolabs.io>