modules/demux/adaptive/playlist/Inheritables.cpp
@@ -29,6 +29,7 @@
 #include "SegmentTimeline.h"
 
 #include <algorithm>
+#include <limits>
 
 using namespace adaptive::playlist;
 using namespace adaptive;
