modules/demux/adaptive/playlist/SegmentInformation.cpp
@@ -34,6 +34,7 @@
 
 #include <algorithm>
 #include <cassert>
+#include <limits>
 
 using namespace adaptive::playlist;
 
