modules/demux/adaptive/playlist/SegmentTimeline.cpp
@@ -29,6 +29,7 @@
 
 #include <algorithm>
 #include <sstream>
+#include <limits>
 
 using namespace adaptive::playlist;
 
